修改maven打包、注意最外层pom的修改