@@ -16,15 +16,39 @@
     </modules>
     
     <properties>
-        <jdk.version>1.7</jdk.version>
+
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
+        <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
+        <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+        <skip_maven_deploy>false</skip_maven_deploy>
+        <jetty-maven-plugin.version>8.1.16.v20140903</jetty-maven-plugin.version>
+        <tomcat6-maven-plugin.version>2.2</tomcat6-maven-plugin.version>
+        <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
+
+        <jdk.version>1.8</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <jvmargs>-XX:MaxPermSize=384m -Xms512m -Xmx1024m</jvmargs>
-        <slf4j.version>1.6.6</slf4j.version>
+        <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>1.2.16</log4j.version>
         <junit.version>4.10</junit.version>
-        <spring.version>3.2.4.RELEASE</spring.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
         <mybatis.version>3.2.4</mybatis.version>
+        <mybatis.spring.version>1.2.2</mybatis.spring.version>
+        <mysql-connector.version>5.1.29</mysql-connector.version>
+        <druid.version>1.0.2</druid.version>
+        <fileupload.version>1.3.1</fileupload.version>
+        <quartz.version>2.2.1</quartz.version>
+        <shiro.version>1.3.2</shiro.version>
+        <gson.version>2.3.1</gson.version>
+        <mybatis.generator.version>1.3.2</mybatis.generator.version>
+        <httpclient.version>3.1</httpclient.version>
+        <httpcomponents.version>4.5</httpcomponents.version>
+        <jstl.version>1.1.2</jstl.version>
+        <taglibs.standar.version>1.1.2</taglibs.standar.version>
+        <javax.servlet.version>3.0.1</javax.servlet.version>
+        <velocity.version>1.6.3</velocity.version>
+        <velocity-tools-view.version>1.4</velocity-tools-view.version>
     </properties>
 
 
@@ -40,14 +64,14 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.jackson</groupId>-->
+            <!--<artifactId>jackson-mapper-asl</artifactId>-->
+            <!--<version>1.9.4</version>-->
+        <!--</dependency>-->
         <!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version> </dependency> -->
 
@@ -98,6 +122,20 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <!-- spring MappingJackson2HttpMessageConverter 依赖的包 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.1</version>
+        </dependency>
+
+
         <!-- springframe end -->
 
         <!-- mybatis核心包 -->
@@ -110,24 +148,24 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.2.2</version>
+            <version>${mybatis.spring.version}</version>
         </dependency>
         <!-- mysql驱动包 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.29</version>
+            <version>${mysql-connector.version}</version>
         </dependency>
-        <!-- 阿里巴巴数据源包 -->
+        <!-- 阿里巴巴数据库连接池包 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.2</version>
+            <version>${druid.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version>
+            <version>${fileupload.version}</version>
         </dependency>
         <!-- 日志文件管理包 -->
         <!-- log start -->
@@ -151,79 +189,157 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>1.8.6</version>
+            <version>${quartz.version}</version>
         </dependency>
+
         <!-- 引入 shiro 权限管理模块 -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>1.2.2</version>
+            <version>${shiro.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.3</version>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.3</version>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${shiro.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <!-- mybatis 自动创建dao包 -->
+
+        <!-- mybatis 自动创建dao包 这个后期会被mybatis plus代替-->
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.2</version>
+            <version>${mybatis.generator.version}</version>
         </dependency>
 
         <!-- json 解析 -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.3.1</version>
+            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
+            <version>${httpclient.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5</version>
+            <version>${httpcomponents.version}</version>
         </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.1.2</version>
+            <version>${jstl.version}</version>
         </dependency>
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
-            <version>1.1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>1.2.2</version>
+            <version>${taglibs.standar.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
-            <version>1.6.3</version>
+            <version>${velocity.version}</version>
         </dependency>
         <dependency>
             <groupId>velocity-tools</groupId>
             <artifactId>velocity-tools-view</artifactId>
-            <version>1.4</version>
+            <version>${velocity-tools-view.version}</version>
         </dependency>
-
     </dependencies>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+                <!-- 这里包含了所有的xml文件。 dev prod 文件里面不要放xml问价。否则dev prod也会被放到resources文件下-->
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <!--<excludes>-->
+                    <!--<exclude>src/main/resources/mapper/*.xml</exclude>-->
+                    <!--<exclude>src/main/resources/dev</exclude>-->
+                <!--</excludes>-->
+            </resource>
+            <resource>
+                <directory>src/main/resources/${resourcePath}/</directory>
+            </resource>
+            <!--<resource>-->
+                <!--<directory>src/main/resources/mapper/</directory>-->
+            <!--</resource>-->
+        </resources>
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<artifactId>maven-resources-plugin</artifactId>-->
+                <!--<version>2.5</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>copy-xmls</id>-->
+                        <!--<goals>-->
+                            <!--<goal>copy-resources</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<outputDirectory>${basedir}/target/classes/mapper</outputDirectory>-->
+                            <!--<resources>-->
+                                <!--<resource>-->
+                                    <!--<directory>src/main/resources/mapper/</directory>-->
+                                    <!--<includes>-->
+                                        <!--<include>*.xml</include>-->
+                                    <!--</includes>-->
+                                <!--</resource>-->
+                            <!--</resources>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--&lt;!&ndash;<execution>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<id>copy-con</id>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<goals>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<goal>copy-resources</goal>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</goals>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<outputDirectory>${basedir}/target/classes/</outputDirectory>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<resources>&ndash;&gt;-->
+                                <!--&lt;!&ndash;<resource>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<directory>src/main/resources/${resourcePath}/</directory>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;<includes>&ndash;&gt;-->
+                                        <!--&lt;!&ndash;<include>**/*.xml</include>&ndash;&gt;-->
+                                    <!--&lt;!&ndash;</includes>&ndash;&gt;-->
+                                <!--&lt;!&ndash;</resource>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</resources>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</execution>&ndash;&gt;-->
+                <!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    </build>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <resourcePath>dev</resourcePath>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <resourcePath>prod</resourcePath>
+            </properties>
+        </profile>
+    </profiles>
 </project>
